tests/semantic/var_single/var_single.err
Error: Ungrounded variable X in file var_single.dl at line 8
A(X) :- A(Y).
--^-----------
Warning: Variable X only occurs once in file var_single.dl at line 8
A(X) :- A(Y).
--^-----------
Warning: Variable Y only occurs once in file var_single.dl at line 8
A(X) :- A(Y).
----------^---
Warning: Variable Y only occurs once in file var_single.dl at line 11
A(X) :- A(X), A(Y).
----------------^---
1 errors generated, evaluation aborted
