tests/semantic/var_single/var_single.dl

.decl A ( x : number )

// this should be fine
A(X) :- A(X).

// those should be both reported as a problem
A(X) :- A(Y).

// Y should produce an error
A(X) :- A(X), A(Y).
